--- a/countdown/style.css
+++ b/countdown/style.css
@@ -1,3 +1,10 @@
+#mode-toggle {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 999;
+  }
+
 body {
 	background-color: #f1f1f1;
 	font-family: Arial, sans-serif;
